# RAPPIDS

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
data/: avgTrajGen.json  avgTrajGenODROID.json  avgTrajGenTX2.json  avgTrajGeni7.json  collisionCheckingTime.json
doc/html/: DepthImagePlanner_8hpp_source.html  MonotonicTrajectory_8hpp_source.html  Pyramid_8hpp_source.html  RapidTrajectoryGenerator_8hpp_source.html  Rotation_8hpp_source.html  SingleAxisTrajectory_8hpp_source.html  Trajectory_8hpp_source.html  Vec3_8hpp_source.html  annotated.html  autotoc_md0.html  classCommonMath_1_1Rotation.html  classCommonMath_1_1Trajectory.html  classCommonMath_1_1Vec3.html  classMonotonicTrajectory.html  classRapidQuadrocopterTrajectoryGenerator_1_1RapidTrajectoryGenerator.html  classRapidQuadrocopterTrajectoryGenerator_1_1SingleAxisTrajectory.html  classRectangularPyramidPlanner_1_1DepthImagePlanner.html  classRectangularPyramidPlanner_1_1DepthImagePlanner_1_1ExplorationCost.html  classRectangularPyramidPlanner_1_1DepthImagePlanner_1_1RandomTrajectoryGenerator.html  classRectangularPyramidPlanner_1_1Pyramid.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_21d920e668d9b3ecd895583f832a9347.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_63772b626f2709090f0bdca0f40827b4.html  files.html  functions.html  (+31 more)
scripts/: plotAvgTrajGenNum.py  plotConservativeness.py
src/: CMakeLists.txt  DepthImagePlanner.cpp  RapidTrajectoryGenerator.cpp
test/: Benchmarker.cpp  CMakeLists.txt
(+47 files in other folders)
